adjusted padding-top on about-me section to fix problem of section title being blocked by navbar on mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -88,6 +88,7 @@ h2:after {
 /* ABOUT ME SECTION */
 /* ---------------- */
 .intro{
+  padding-top: 110px;
   background-color: #F8F8F8;
   color: #1E2A45;
   font-weight: 400;
